--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -46,7 +46,18 @@ steps:
   displayName: 'Publish Artifact (WebApp.zip)'
   inputs:
     PathtoPublish: '$(build.artifactstagingdirectory)'
-
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'Azure subscription 1 (38f51217-7342-4f22-b591-b19d85f1504d)'
+    subscriptionId: '38f51217-7342-4f22-b591-b19d85f1504d'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'win-rg-web-app'
+    location: 'East US'
+    templateLocation: 'Linked artifact'
+    csmFile: 'template/template.json'
+    csmParametersFile: 'template/parameters.json'
+    deploymentMode: 'Incremental'
 - task: AzureRmWebAppDeployment@4
   displayName: 'Azure App Service Deploy: web-app-win-mach'
   inputs:
