Update 01_azure-pipelines-ci.yml for Azure Pipelines

--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -67,6 +67,11 @@ steps:
 #     Package: '$(System.DefaultWorkingDirectory)/drop/WebApp.zip'
 #     TakeAppOfflineFlag: true
 #     JSONFiles: '**/appsettings.json'
+- task: DownloadPipelineArtifact@2
+  inputs:
+    buildType: 'current'
+    artifactName: 'drop'
+    targetPath: '$(System.DefaultWorkingDirectory)'
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
