--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -33,7 +33,6 @@ steps:
     command: test
     projects: '**/*UnitTest*.csproj'
     arguments: '--configuration $(BuildConfiguration)'
-
 - task: DotNetCoreCLI@2
   displayName: Create Web App Package (.zip)
   inputs:
@@ -41,11 +40,13 @@ steps:
     publishWebProjects: True
     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
     zipAfterPublish: True
-
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact (WebApp.zip)'
   inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
+    PathtoPublish: $(Build.ArtifactStagingDirectory)
+    ArtifactName: DemoApplication
+    publishLocation: Container
+
 # - task: AzureResourceManagerTemplateDeployment@3
 #   inputs:
 #     deploymentScope: 'Resource Group'
@@ -70,7 +71,7 @@ steps:
 - task: DownloadPipelineArtifact@2
   inputs:
     buildType: 'current'
-    artifactName: 'drop/*'
+    artifactName: 'DemoApplication'
     targetPath: '$(System.DefaultWorkingDirectory)'
 - task: CmdLine@2
   inputs:
