Update 01_azure-pipelines-ci.yml for Azure Pipelines

--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -47,18 +47,18 @@ steps:
     ArtifactName: DemoApplication
     publishLocation: Container
 
-# - task: AzureResourceManagerTemplateDeployment@3
-#   inputs:
-#     deploymentScope: 'Resource Group'
-#     azureResourceManagerConnection: 'Azure subscription 1 (38f51217-7342-4f22-b591-b19d85f1504d)'
-#     subscriptionId: '38f51217-7342-4f22-b591-b19d85f1504d'
-#     action: 'Create Or Update Resource Group'
-#     resourceGroupName: 'win-rg-web-app'
-#     location: 'East US'
-#     templateLocation: 'Linked artifact'
-#     csmFile: 'template/template.json'
-#     csmParametersFile: 'template/parameters.json'
-#     deploymentMode: 'Incremental'
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'Azure subscription 1 (38f51217-7342-4f22-b591-b19d85f1504d)'
+    subscriptionId: '38f51217-7342-4f22-b591-b19d85f1504d'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'win-rg-web-app'
+    location: 'East US'
+    templateLocation: 'Linked artifact'
+    csmFile: 'template/template.json'
+    csmParametersFile: 'template/parameters.json'
+    deploymentMode: 'Incremental'
 # - task: AzureRmWebAppDeployment@3
 #   displayName: Deploy WebApp to Azure
 #   inputs:
@@ -73,11 +73,6 @@ steps:
     buildType: 'current'
     artifactName: 'DemoApplication'
     targetPath: '$(System.DefaultWorkingDirectory)'
-- task: CmdLine@2
-  inputs:
-    script: |
-      cd $(System.DefaultWorkingDirectory)
-      ls
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
