--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -8,44 +8,44 @@ variables:
   
 steps:
 
-- task: UseDotNet@2
-  displayName: Install .NET 6 sdk
-  inputs:
-    packageType: sdk
-    version: 6.0.x
-    installationPath: $(Agent.ToolsDirectory)/dotnet
+# - task: UseDotNet@2
+#   displayName: Install .NET 6 sdk
+#   inputs:
+#     packageType: sdk
+#     version: 6.0.x
+#     installationPath: $(Agent.ToolsDirectory)/dotnet
 
-- task: DotNetCoreCLI@2
-  displayName: Restore Nuget Packages
-  inputs:
-    command: restore
-    projects: '**/WebApp.csproj'
+# - task: DotNetCoreCLI@2
+#   displayName: Restore Nuget Packages
+#   inputs:
+#     command: restore
+#     projects: '**/WebApp.csproj'
 
-- task: DotNetCoreCLI@2
-  displayName: Build Web App
-  inputs:
-    projects: '**/WebApp.csproj'
-    arguments: '--configuration $(BuildConfiguration)'
+# - task: DotNetCoreCLI@2
+#   displayName: Build Web App
+#   inputs:
+#     projects: '**/WebApp.csproj'
+#     arguments: '--configuration $(BuildConfiguration)'
 
-- task: DotNetCoreCLI@2
-  displayName: Run Unit Tests
-  inputs:
-    command: test
-    projects: '**/*UnitTest*.csproj'
-    arguments: '--configuration $(BuildConfiguration)'
-- task: DotNetCoreCLI@2
-  displayName: Create Web App Package (.zip)
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
-    zipAfterPublish: True
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact (WebApp.zip)'
-  inputs:
-    PathtoPublish: $(Build.ArtifactStagingDirectory)
-    ArtifactName: DemoApplication
-    publishLocation: Container
+# - task: DotNetCoreCLI@2
+#   displayName: Run Unit Tests
+#   inputs:
+#     command: test
+#     projects: '**/*UnitTest*.csproj'
+#     arguments: '--configuration $(BuildConfiguration)'
+# - task: DotNetCoreCLI@2
+#   displayName: Create Web App Package (.zip)
+#   inputs:
+#     command: publish
+#     publishWebProjects: True
+#     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+#     zipAfterPublish: True
+# - task: PublishBuildArtifacts@1
+#   displayName: 'Publish Artifact (WebApp.zip)'
+#   inputs:
+#     PathtoPublish: $(Build.ArtifactStagingDirectory)
+#     ArtifactName: DemoApplication
+#     publishLocation: Container
 
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
@@ -68,21 +68,21 @@ steps:
 #     Package: '$(System.DefaultWorkingDirectory)/drop/WebApp.zip'
 #     TakeAppOfflineFlag: true
 #     JSONFiles: '**/appsettings.json'
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: 'current'
-    artifactName: 'DemoApplication'
-    targetPath: '$(System.DefaultWorkingDirectory)'
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'Azure subscription 1 (38f51217-7342-4f22-b591-b19d85f1504d)'
-    appType: 'webApp'
-    WebAppName: 'web-app-win-mach'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/WebApp.zip'
-# - task: AzureRmWebAppDeployment@4
-#   displayName: 'Azure App Service Deploy: web-app-win-mach'
+# - task: DownloadPipelineArtifact@2
 #   inputs:
+#     buildType: 'current'
+#     artifactName: 'DemoApplication'
+#     targetPath: '$(System.DefaultWorkingDirectory)'
+# - task: AzureRmWebAppDeployment@4
+#   inputs:
+#     ConnectionType: 'AzureRM'
 #     azureSubscription: 'Azure subscription 1 (38f51217-7342-4f22-b591-b19d85f1504d)'
+#     appType: 'webApp'
 #     WebAppName: 'web-app-win-mach'
-#     packageForLinux: '$(System.DefaultWorkingDirectory)/_prathibha1508.WebAppWithDatabaseDemo/drop/WebApp.zip'
+#     packageForLinux: '$(System.DefaultWorkingDirectory)/WebApp.zip'
+# # - task: AzureRmWebAppDeployment@4
+# #   displayName: 'Azure App Service Deploy: web-app-win-mach'
+# #   inputs:
+# #     azureSubscription: 'Azure subscription 1 (38f51217-7342-4f22-b591-b19d85f1504d)'
+# #     WebAppName: 'web-app-win-mach'
+# #     packageForLinux: '$(System.DefaultWorkingDirectory)/_prathibha1508.WebAppWithDatabaseDemo/drop/WebApp.zip'
