Update 01_azure-pipelines-ci.yml for Azure Pipelines

--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -1,7 +1,6 @@
 trigger: 'none' # will disable CI builds entirely
 
-pool:
-  vmImage: 'self-hosted-agent-win'
+pool: self-hosted-agent-win
     
 variables:
   BuildConfiguration: release
