--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -22,12 +22,12 @@ steps:
   inputs:
     projects: '**/WebApp.csproj'
     arguments: '--configuration $(BuildConfiguration)'
-- task: DotNetCoreCLI@2
-  displayName: Run Unit Tests
-  inputs:
-    command: test
-    projects: '**/*UnitTest*.csproj'
-    arguments: '--configuration $(BuildConfiguration)'
+# - task: DotNetCoreCLI@2
+#   displayName: Run Unit Tests
+#   inputs:
+#     command: test
+#     projects: '**/*UnitTest*.csproj'
+#     arguments: '--configuration $(BuildConfiguration)'
 - task: DotNetCoreCLI@2
   displayName: Create Web App Package (.zip)
   inputs:
