--- a/01_azure-pipelines-ci.yml
+++ b/01_azure-pipelines-ci.yml
@@ -6,12 +6,12 @@ variables:
   BuildConfiguration: release
   
 steps:
-- task: UseDotNet@2
-  displayName: Install .NET 6 sdk
-  inputs:
-    packageType: sdk
-    version: 6.0.x
-    installationPath: $(Agent.ToolsDirectory)/dotnet
+# - task: UseDotNet@2
+#   displayName: Install .NET 6 sdk
+#   inputs:
+#     packageType: sdk
+#     version: 6.0.x
+#     installationPath: $(Agent.ToolsDirectory)/dotnet
 - task: DotNetCoreCLI@2
   displayName: Restore Nuget Packages
   inputs:
